--- a/style.css
+++ b/style.css
@@ -1,30 +1,7 @@
-/* Estilo para o corpo da página */
-body {
-    background-color: #f0f0f0;
-  }
-  
-  /* Estilo para o título */
-  h1 {
-    margin-top: 20px;
-  }
-  
-  /* Estilo para a borda dos contêineres */
-  .border {
-    border: 1px solid #ccc;
-    padding: 20px;
-    text-align: center;
-    background-color: #fff;
-  }
-  
-  /* Estilo para o texto das lâmpadas */
-  p {
-    font-weight: bold;
-  }
-  
-  /* Estilo para as imagens das lâmpadas */
-  .img-fluid {
-    max-width: 100%;
-    height: auto;
-    cursor: pointer;
-  }
-  
+canvas {
+    border:1px solid #d3d3d3;
+    background-color: #f1f1f1;
+}canvas {
+    border:1px solid #d3d3d3;
+    background-color: #f1f1f1;
+}
